syntax = "proto3";

package proto.v1;

option go_package = "authservice/genproto/v1";

service AuthService {
  rpc Ping(PingRequest) returns(PongResponse){}
}

message PingRequest {
  string msg = 1 ;
}

message PongResponse {
  string msg = 1;
}
