syntax = "proto3";

package proto.v1;

option go_package = "permissionservice/genproto/v1";

service PermissionService {
  rpc GetAdmin(GetAdminRequest) returns(GetAdminResponse){}
}

message GetAdminRequest {
  string id = 1 ;
}

message GetAdminResponse {
  string username = 1;
  string authMsg = 2;
}
